# heekkr-resolver-simple

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.alpine  README.md  cli.py  compose.yaml  pyproject.toml  run.py
.github/workflows/: deploy-docker-image.yml
app/: __init__.py  core.py
app/resolvers/gdlib/: __init__.py  searcher.py
app/resolvers/splib/: searcher.py
app/services/: __init__.py  gdlib.py  sblib.py  seoul_dongdaemun.py  seoul_gangnam.py  seoul_gwanak.py  seoul_gwangjin.py  seoul_mapo.py  seoul_seodaemun.py  seoul_songpa.py
app/services/common/: jnet.py  jnet_splib.py
app/services/gdlib/: __init__.py  searcher.py
app/services/splib/: __init__.py  searcher.py
app/utils/: cache.py  kakao.py  searcher.py  text.py
heekkr_resolvers/resolvers/splib/: __init__.py  searcher.py
tests/services/: gdlib_index.html  gdlib_result.html  sblib_export.txt  sblib_index.html  sblib_result.html  sdmlib_index.html  sdmlib_result.html  splib_export.py  splib_index.html  splib_result.html  test_gdlib.py  test_sblib.py  test_sdmlib.py  test_splib.py
